[gd_scene load_steps=15 format=3 uid="uid://d16l1w8ee26ur"]

[ext_resource type="PackedScene" uid="uid://dlv2dp0xkahj6" path="res://tile_map.tscn" id="1_2moy1"]
[ext_resource type="Script" path="res://main.gd" id="1_dvwld"]
[ext_resource type="PackedScene" uid="uid://dwdjibre48wnu" path="res://mob.tscn" id="2_jhevr"]
[ext_resource type="Script" path="res://MobPath.gd" id="3_dpj3h"]
[ext_resource type="PackedScene" uid="uid://q01xk8tc46wq" path="res://knight_mob.tscn" id="3_nku06"]
[ext_resource type="PackedScene" uid="uid://dpkeplsya206u" path="res://goblin_mob.tscn" id="4_13xgw"]
[ext_resource type="PackedScene" uid="uid://cy5mkgrp01ah0" path="res://hud.tscn" id="5_dcfoj"]
[ext_resource type="PackedScene" uid="uid://brxbrris055gd" path="res://imp_mob.tscn" id="5_s6bo8"]
[ext_resource type="AudioStream" uid="uid://fsrq42wfmcqc" path="res://music/Bloons.mp3" id="9_f52ho"]
[ext_resource type="AudioStream" uid="uid://b3gb2xh28eej6" path="res://music/BloonsBattle.mp3" id="10_la0ot"]

[sub_resource type="Curve2D" id="Curve2D_g3m8r"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 64, 114.341, 0, 0, 0, 0, 290, 111.376, 0, 0, 0, 0, 290, 90.6235, 0, 0, 0, 0, 389, 95.5647, 0, 0, 0, 0, 394, 43.1882, 0, 0, 0, 0, 415, 43.1882, 0, 0, 0, 0, 413, 25.4, 0, 0, 0, 0, 543, 28.3647, 0, 0, 0, 0, 547, 329.776, 0, 0, 0, 0, 523, 331.753, 0, 0, 0, 0, 527, 351.518, 0, 0, 0, 0, 105, 351.518, 0, 0, 0, 0, 102, 366.341, 0, 0, 0, 0, 91, 370.294, 0, 0, 0, 0, 94, 528.412, 0, 0, 0, 0, 109, 529.4, 0, 0, 0, 0, 108, 548.177, 0, 0, 0, 0, 126, 550.153, 0, 0, 0, 0, 125, 563, 0, 0, 0, 0, 140, 563.988, 0, 0, 0, 0, 143, 575.847, 0, 0, 0, 0, 397, 568.929, 0, 0, 0, 0, 396, 549.165, 0, 0, 0, 0, 418, 549.165, 0, 0, 0, 0, 420, 535.329, 0, 0, 0, 0, 438, 537.306, 0, 0, 0, 0, 437, 513.588, 0, 0, 0, 0, 449, 511.612, 0, 0, 0, 0, 447, 496.788, 0, 0, 0, 0, 532, 491.847, 0, 0, 0, 0, 541, 528.412, 0, 0, 0, 0, 569, 527.424, 0, 0, 0, 0, 565, 550.153, 0, 0, 0, 0, 589, 559.047, 0, 0, 0, 0, 590, 585.729, 0, 0, 0, 0, 606, 578.812, 0, 0, 0, 0, 611, 591.659, 0, 0, 0, 0, 813, 588.697, 0, 0, 0, 0, 817, 334.719, 0, 0, 0, 0, 796, 317.919, 0, 0, 0, 0, 782, 284.319, 0, 0, 0, 0, 785, 76.7886, 0, 0, 0, 0, 972, 80.7416, 0, 0, 0, 0, 987, 79.7533, 0, 0, 0, 0, 983, 59.9885, 0, 0, 0, 0, 1002, 67.8944, 0, 0, 0, 0, 1002, 42.2002, 0, 0, 0, 0, 1123, 46.1532, 0, 0, 0, 0, 1124, 339.66, 0, 0, 0, 0, 975, 339.66, 0, 0, 0, 0, 978, 513.591, 0, 0, 0, 0, 1170, 516.555, 0, 0, 0, 0, 1176, 485.92, 0, 0, 0, 0, 1456, 491.849)
}
point_count = 54

[sub_resource type="CircleShape2D" id="CircleShape2D_riaiw"]
radius = 27.074

[sub_resource type="CircleShape2D" id="CircleShape2D_vevx5"]
radius = 125.0

[sub_resource type="TileSet" id="TileSet_tvv5n"]

[node name="Main" type="Node"]
script = ExtResource("1_dvwld")
mob_scene = ExtResource("2_jhevr")
knight_scene = ExtResource("3_nku06")
goblin_scene = ExtResource("4_13xgw")
imp_scene = ExtResource("5_s6bo8")

[node name="GrassMap" parent="." instance=ExtResource("1_2moy1")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.358

[node name="GrassMobPath" type="Path2D" parent="."]
position = Vector2(0, -3.70238)
scale = Vector2(1, 1.0119)
curve = SubResource("Curve2D_g3m8r")
script = ExtResource("3_dpj3h")
mob_scene = ExtResource("2_jhevr")

[node name="MobSpawnLocation" type="Area2D" parent="."]
position = Vector2(71, 113)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MobSpawnLocation"]
shape = SubResource("CircleShape2D_riaiw")

[node name="StartTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_dcfoj")]

[node name="MobCheckpoint" type="Area2D" parent="."]
position = Vector2(956, 599)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MobCheckpoint"]
position = Vector2(486, -103)
shape = SubResource("CircleShape2D_vevx5")

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 1.116

[node name="KnightMobTimer" type="Timer" parent="."]
wait_time = 1.509

[node name="GoblinMobTimer" type="Timer" parent="."]

[node name="ImpMobTimer" type="Timer" parent="."]

[node name="StartTimer2" type="Timer" parent="."]
wait_time = 5.186

[node name="TitleMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_f52ho")
autoplay = true

[node name="GrassBattle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_la0ot")

[node name="MountainMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_tvv5n")
format = 2

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="GrassMobPath" method="_on_mob_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="area_entered" from="MobCheckpoint" to="." method="_on_mob_checkpoint_area_entered"]
[connection signal="body_entered" from="MobCheckpoint" to="." method="_on_mob_checkpoint_body_entered"]
[connection signal="timeout" from="RoundTimer" to="." method="_on_round_timer_timeout"]
[connection signal="timeout" from="KnightMobTimer" to="." method="_on_knight_mob_timer_timeout"]
[connection signal="timeout" from="GoblinMobTimer" to="." method="_on_goblin_mob_timer_timeout"]
[connection signal="timeout" from="ImpMobTimer" to="." method="_on_imp_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer2" to="." method="_on_start_timer_2_timeout"]
